--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Once again—Happy Birthday, Didi!🎂✨
         // 2. To change the sender, change "[Your Name]" on line 101.
         // 3. To change the main wish, edit the text inside the <p> tags on lines 97-99.
         // 4. Remember to host this file online to share the URL!
+        // Forcing rebuild
     </script>
 </body>
 </html>
+
